--- a/api/package.json
+++ b/api/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "api",
-  "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "clean": "rimraf dist",
-    "prestart": "npm run clean && npm run build",
-    "start": "func start",
-    "test": "echo \"No tests yet...\""
-  },
-  "dependencies": {
-    "@azure/functions": "^4.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "^18.x",
-    "typescript": "^4.0.0",
-    "rimraf": "^5.0.0"
-  },
-  "main": "dist/src/functions/*.js"
+    "name": "api",
+    "version": "1.0.0",
+    "description": "",
+    "engines": {
+        "node": "18"
+    },
+    "scripts": {
+        "build": "tsc",
+        "watch": "tsc -w",
+        "clean": "rimraf dist",
+        "prestart": "npm run clean && npm run build",
+        "start": "func start",
+        "test": "echo \"No tests yet...\""
+    },
+    "dependencies": {
+        "@azure/functions": "^4.0.0"
+    },
+    "devDependencies": {
+        "@types/node": "^18.x",
+        "typescript": "^4.0.0",
+        "rimraf": "^5.0.0"
+    },
+    "main": "dist/src/functions/*.js"
 }
